Completion of the first lecture

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -105,4 +105,14 @@
 				Характеристика кольца $R$ - наименьшее положительное целое $n \big| n \cdot x = 0, \forall x \in R$.\\
 				Если такого $n$ не существует, то будем говорить, что $R$ имеет характеристику 0. Обозначается $char R = n$.
 			\end{definition}
+			\begin{theorem}
+				Пусть $R$ - кольцо с единицей. Если единица имеет бесконечный порядок относительно сложения, то $char R = 0$. Если единица имеет порядок $n$ относительно сложения, то $char R = n$.
+			\end{theorem}
+			\begin{theorem}
+				Если $R$ - кольцо целостности, то $char R = \Big[$
+				\begin{tabular}{l}
+				0\\
+				p - простое
+				\end{tabular}
+			\end{theorem}
 \end{document}
